# discovery-lab

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  双击启动 DiscoveryLab.cmd
alembic/: env.py
alembic/versions/: 20260715_0001_initial.py  20260715_0002_active_run_idempotency.py  20260716_0003_claim_review_workflow.py  20260716_0004_opportunity_drafts.py  20260716_0005_context_manifest_retrieval.py  20260716_0006_agent_tool_harness.py  20260716_0007_product_decision_prd_chain.py
apps/web/: package.json  vitest.config.ts
design-system/discoverylab/: MASTER.md
docs/: development-environment.md  domain-model.md  evaluation-and-bad-cases.md  product-definition.md  system-architecture.md  vertical-slice-01.md  vertical-slice-02.md  vertical-slice-03.md  vertical-slice-04.md
evals/bad-cases/: csv-trailing-blank-line.json
evals/golden/: evidence_to_claim.json  source_to_evidence.json
fixtures/helphub/: README.md  curated-evidence.json  decision-brief.json  interviews.md  tickets.csv
infra/: compose.yaml
mcp/: discovery-lab.mcp.json
scripts/: bootstrap.ps1  check.ps1  dev.ps1  doctor.ps1  eval.ps1  infra.ps1  launch.ps1  seed-helphub.ps1
src/discovery_lab/: __init__.py  config.py  main.py  mcp_server.py
tests/: test_helphub_fixture_contract.py
tests/agent_harness/: test_discovery_graph.py
tests/backend/: conftest.py  test_agent_run_api.py  test_claim_workflow_api.py  test_evaluation_reporting_api.py  test_ingestion_fail_closed.py  test_ingestion_runner.py  (+4 more)
(+90 files in other folders)
