[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "discovery-lab"
version = "0.1.0"
description = "Evidence-driven AI product discovery and decision workspace"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.17,<2",
  "fastapi>=0.136.3,<0.137",
  "httpx[socks]>=0.28,<1",
  "langgraph>=1.2.9,<1.3",
  "langgraph-checkpoint-postgres>=3.1,<4",
  "mcp>=1.27,<2",
  "openai>=2.24,<3",
  "pgvector>=0.4,<1",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.11,<3",
  "pymupdf>=1.26,<2",
  "python-multipart>=0.0.20,<1",
  "redis>=7.1,<8",
  "sqlalchemy>=2.0.46,<3",
  "structlog>=25.5,<26",
  "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
discovery-lab-mcp = "discovery_lab.mcp_server:main"

[dependency-groups]
dev = [
  "mypy>=1.18,<2",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=7,<8",
  "ruff>=0.14,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/discovery_lab"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["discovery_lab"]
